# auto_loader

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
auto_loader/: __init__.py  auto_loader.py
test_loader/: test_loader.py
